# restitution-us17

./: BoardPlayer.py  README.md  maquette.py  run.sh
python/: maquette.py
qt/: BoardPlayer.cpp  BoardPlayer.hpp  CMakeLists.txt  main.cpp
